ProFit/objects/Speaker__c.object
<CustomObject>
    <description>Speaker Object for the Event.</description>
    <fields>
        <fullName>Company__c</fullName>
        <description>Company of the Speaker.</description>
        <inlineHelpText>Input the speaker&apos;s company name.</inlineHelpText>
        <label>Company</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email of the Speaker.</description>
        <inlineHelpText>Valid Email Address of the Speaker.</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Contact number of the Speaker.</description>
        <inlineHelpText>Contact number of the Speaker.</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <label>Speaker</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Speaker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Speaker</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>